--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>Share Button</title>
   <link rel="stylesheet" href="css/style.css">
   
-  <meta property="og:url" content="http://www.your-domain.com/your-page.html" />
+  <meta property="og:url" content="https://madrajib.github.io/test_repo/index.html" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Your Website Title" />
-  <meta property="og:description" content="Your description" />
-  <meta property="og:image" content="http://www.your-domain.com/path/image.jpg" />
+  <meta property="og:title" content="madrajib.github.io" />
+  <meta property="og:description" content="my post sharer" />
+  <meta property="og:image" content="" />
 </head>
 
 <body>
