--- a/index.html
+++ b/index.html
@@ -21,30 +21,20 @@
 
 <body>
 
-  <!-- Comment #2: SDK -->
   <div id="fb-root"></div>
-  <script>
-    (function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s);
-      js.id = id;
-      js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
-  <!-- Comment #3: Content -->
-  <h1>Your Headline</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget tristique nibh,
-    vel consequat purus. Praesent molestie, turpis ut ultrices commodo, felis arcu cursus enim,
-    vel porttitor ante quam vel lacus. Quisque at laoreet sapien. Proin nec purus dolor. Integer
-    pharetra nec ligula a condimentum. Fusce sem orci, porta ut felis id, commodo imperdiet risus.
-  </p>
-
-  <!-- Comment #4: Plugin Code -->
-  <div class="fb-quote"></div>
+  <!-- Your share button code -->
+  <div class="fb-share-button" 
+    data-href="https://www.your-domain.com/your-page.html" 
+    data-layout="button_count">
+  </div>
 
   <!-- Sharingbutton Facebook -->
   <!-- <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fkoyicoding.in" target="_blank" rel="noopener" aria-label="Facebook">
