--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Share Button</title>
   <link rel="stylesheet" href="css/style.css">
-  
+ <meta property="og:url" content="https://madrajib.github.io/test_repo/">
+ <meta name="news_keywords" content="Live TV, Breaking News, India TV live TV, News Channel, Free Live TV">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Live TV: India TV Watch Live News 24x7 Live Streaming">
+    <meta property="og:description"
+        content="Live TV: India TV Watch Online TV Channel News and Live Streaming, Breaking Live TV News and Exclusive News 24x7 India and all over the world on India TV">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="660">
+    <meta property="og:image:height" content="367">
+    <meta property="og:image" content="https://static.indiatvnews.com/LiveTV_OG_Img.gif">
+    <meta property="og:locale" content="en_US">
   
 </head>
 
