--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>Share Button</title>
   <link rel="stylesheet" href="css/style.css">
  <meta property="og:url" content="https://madrajib.github.io/test_repo/">
- <meta name="news_keywords" content="Live TV, Breaking News, India TV live TV, News Channel, Free Live TV">
+ <meta name="news_keywords" content="Live TV, Breaking News, Assom News, News Channel, Free Live TV">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Live TV: India TV Watch Live News 24x7 Live Streaming">
+    <meta property="og:title" content="Assam NEWS: The Fb share is working as a charm!">
     <meta property="og:description"
-        content="Live TV: India TV Watch Online TV Channel News and Live Streaming, Breaking Live TV News and Exclusive News 24x7 India and all over the world on India TV">
+        content="Assam NEWS: madhab sharma has figure out how to share the article to web!">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="660">
     <meta property="og:image:height" content="367">
@@ -33,7 +33,6 @@
  
  <script>
   var url= "https://madrajib.github.io/test_repo/";
-  var title = "This is my repo how are you";
   var popUp = window.open("https://www.facebook.com/sharer/sharer.php?u=" + url + "&t=" + title, "popupwindow", "menubar=1,resizable=1,width=600,height=400");
   popUp.focus();
  </script>
