--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
  
  <script>
   var url= "https://madrajib.github.io/test_repo/";
+  var title = "";
   var popUp = window.open("https://www.facebook.com/sharer/sharer.php?u=" + url + "&t=" + title, "popupwindow", "menubar=1,resizable=1,width=600,height=400");
   popUp.focus();
  </script>
